Add login placeholders and navigation to login page

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 		<header>
             <h1>PaddleMatch</h1>
             <p>Welcome [username]!</p>
+            <a href="login.html">Logout</a>
 		</header>
 		<main>
             <nav>
