--- a/html/login.html
+++ b/html/login.html
@@ -18,8 +18,10 @@
             <br>
             <label for="password">Password:</label>
             <input type="text" name="password" id="password">
+            <br>
+            <a href="index.html">Login</a>
 		</main>
-        
+
 		<footer>
             <h3>
                 <a href="https://github.com/aaronstarky/startup.git">Aaron Starkweather's GitHub</a>
