Add paddlematch logo to header of each page

--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,18 @@
 	</head>
 	<body>
 		<header>
+            <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
             <h1>PaddleMatch</h1>
-            <p>Welcome [username]!</p>
             <a href="login.html">Logout</a>
 		</header>
 		<main>
+            <p>
+                Welcome [username] to PaddleMatch! 
+                PaddleMatch is an application designed to help you and your friends keep track of your pickleball matches.
+                To start tracking a match, click the link "Start Match!"
+                To view previously tracked matches, click the link "View Matches!"
+            </p> 
+
             <nav>
                 <a href="match_setup.html">Start Match</a>
                 <br>
