--- a/html/login.html
+++ b/html/login.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<header>
+            <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
             <h1>PaddleMatch</h1>
 		</header>
 
