--- a/html/match_list.html
+++ b/html/match_list.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<header>
+            <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
             <h1>PaddleMatch</h1>
             <p>Matches for [username]</p>
 		</header>
@@ -17,7 +18,7 @@
                 <br>
                 <a href="index.html">Back</a>
             </nav>
-            
+
             <h3>Placeholder for database data</h3>
             <ul>
                 <li>match 1</li>
