--- a/html/match_setup.html
+++ b/html/match_setup.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<header>
+            <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
             <h1>PaddleMatch</h1>
             <p>Welcome [username]!</p>
             <a href="index.html">Back</a>
@@ -17,7 +18,9 @@
                 <a href="match_track.html">Start Match</a>
             </h3>
 
-            <!-- Websocket communication will allow users to invite others to matches in real-time -->
+            <p>Invite friends in real-time to your game by searching for their usernames and clicking "Invite"</p>
+
+            <!-- Websocket communication will allow users to invite others to matches in real-time -->  
             <h3>Placeholder for WebSocket Communication</h3>
             <div>
                 <label for="playerSearch">Player ID:</label>
