Finalize startup HTML placeholders and add favicon.ico

--- a/html/match_list.html
+++ b/html/match_list.html
@@ -4,7 +4,8 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	    <title>PaddleMatch - Match List</title>
+	    <link rel="icon" type="image/icon" href="../favicon.ico">
+        <title>PaddleMatch - Match List</title>
 	</head>
 	<body>
 		<header>
@@ -21,9 +22,46 @@
 
             <h3>Placeholder for database data</h3>
             <ul>
-                <li>match 1</li>
-                <li>match 2</li>
-                <li>match 3</li>
+                <li>
+                    <div>
+                        <p>
+                            Today's Date
+                        </p>
+                        <p>
+                            Team 1 Score
+                        </p>
+                        <p>
+                            Team 2 Score
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>
+                            Yesterday
+                        </p>
+                        <p>
+                            Team 1 Score
+                        </p>
+                        <p>
+                            Team 2 Score
+                        </p>
+                    </div>
+                </li>
+                <li>
+                    <div>
+                        <p>
+                            The Day Before Yesterday
+                        </p>
+                        <p>
+                            Team 1 Score
+                        </p>
+                        <p>
+                            Team 2 Score
+                        </p>
+                    </div>
+                </li>
+                
             </ul>
             <div name="matchList">
 
