--- a/html/match_track.html
+++ b/html/match_track.html
@@ -10,7 +10,7 @@
 		<header>
             <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
             <h1>PaddleMatch</h1>
-            <a href="index.html">Back</a>
+            <a href="index.html">Exit Match Tracking</a>
             <a href="index.html">Save Match</a>
 		</header>
 		<main>
