Add placeholder section for webservice to get pickleball related headlines

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,11 @@
                 To view previously tracked matches, click the link "View Matches!"
             </p> 
 
+            <!-- Placeholder for webservice that will show pickleball related headlines from off the internet. -->
+            <div>
+                This is a placeholder for a web service that will grab the most recent pickleball related headline off of Google
+            </div>
+
             <nav>
                 <a href="match_setup.html">Start Match</a>
                 <br>
