--- a/html/match_setup.html
+++ b/html/match_setup.html
@@ -5,6 +5,8 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	    <title>PaddleMatch - Setup Match</title>
+        <link rel="stylesheet" href="../css/styles.css">
+
 	</head>
 	<body>
 		<header>
@@ -15,7 +17,9 @@
 		</header>
 		<main>
             <h3>
-                <a href="match_track.html">Start Match</a>
+                <div class="menuButton">
+                    <a class="buttonText" href="match_track.html">START MATCH</a>
+                </div>
             </h3>
 
             <p>Invite friends in real-time to your game by searching for their usernames and clicking "Invite"</p>
