Standardize header across all files

--- a/match_track.html
+++ b/match_track.html
@@ -10,11 +10,26 @@
 	</head>
 	<body>
 		<header>
-            <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
-            <h1>PaddleMatch</h1>
-            <a href="index.html">Exit Match Tracking</a>
-            <a href="index.html">Save Match</a>
-		</header>
+
+            <div id="logo">
+                <img src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
+            </div>
+            <div id="service-info">
+                <h1 class="service-name">PaddleMatch</h1>
+                <nav class="nav-buttons">
+                    <a class="header-link" id="start-match-button" href="match_setup.html">
+                        START MATCH
+                    </a>
+                    <a class="header-link" id="view-matches-button" href="match_list.html">
+                        VIEW MATCHES
+                    </a>
+                    <a class="header-link" id="logout-button" href="login.html">
+                        LOGIN
+                    </a>
+                </nav>
+            </div> 
+                       
+        </header>
 		<main>
 
             <!-- Score Keeping is done here-->
