--- a/login.html
+++ b/login.html
@@ -5,14 +5,31 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	    <title>PaddleMatch - Login</title>
-		<link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="css/styles.css">
 
 	</head>
 	<body>
 		<header>
-            <img src="../PaddleMatchlogo.svg" alt="PaddleMatch Logo">
-            <h1>PaddleMatch</h1>
-		</header>
+
+            <div id="logo">
+                <img src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
+            </div>
+            <div id="service-info">
+                <h1 class="service-name">PaddleMatch</h1>
+                <nav class="nav-buttons">
+                    <a class="header-link" id="start-match-button" href="match_setup.html">
+                        START MATCH
+                    </a>
+                    <a class="header-link" id="view-matches-button" href="match_list.html">
+                        VIEW MATCHES
+                    </a>
+                    <a class="header-link" id="logout-button" href="login.html">
+                        LOGIN
+                    </a>
+                </nav>
+            </div> 
+                       
+        </header>
 
 		<main>
             <h3>Placeholder for Login Components</h3>
