--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 	</head>
 	<body>
 		<header>
-
             <div id="logo">
-                <img src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
+                <img id="app-logo" src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
             </div>
             <div id="service-info">
                 <h1 class="service-name">PaddleMatch</h1>
@@ -28,7 +27,6 @@
                     </a>
                 </nav>
             </div> 
-                       
         </header>
 		<main>
             <p>
