Updated the header styles

--- a/match_setup.html
+++ b/match_setup.html
@@ -10,9 +10,8 @@
 	</head>
 	<body>
 		<header>
-
             <div id="logo">
-                <img src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
+                <img id="app-logo" src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
             </div>
             <div id="service-info">
                 <h1 class="service-name">PaddleMatch</h1>
@@ -27,8 +26,7 @@
                         LOGIN
                     </a>
                 </nav>
-            </div> 
-                       
+            </div>         
         </header>
 		<main>
             <h3>
