Standardize footer text and finish style for match setup

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <br> 
 		</main>
 		<footer>
-            <a class="header-link" href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER GITHUB</a>
+            <a class="header-link" href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
 		</footer>
 	</body>
 </html>
