--- a/match_setup.html
+++ b/match_setup.html
@@ -30,24 +30,27 @@
         </header>
 		<main>
             <h3>
-                <div class="menuButton">
-                    <a class="buttonText" href="match_track.html">START MATCH</a>
+                <div class="interactive-button">
+                    <a class="header-link" href="match_track.html">BEGIN MATCH</a>
                 </div>
             </h3>
 
             <p>Invite friends in real-time to your game by searching for their usernames and clicking "Invite"</p>
 
             <!-- Websocket communication will allow users to invite others to matches in real-time -->  
-            <h3>Placeholder for WebSocket Communication</h3>
-            <div>
-                <label for="playerSearch">Player ID:</label>
-                <input type="text" name="playerSearch" id="playerSearch">
+            <div class="player-search-box">
+                <h3>Placeholder for WebSocket Communication</h3>
+                <ul id="players">
+                </ul>
+                <div>
+                    <label for="playerSearch">Player ID:</label>
+                    <input type="text" name="playerSearch" id="playerSearch">
+                </div>
             </div>
+            
 		</main>
 		<footer>
-            <h3>
-                <a href="https://github.com/aaronstarky/startup.git">Aaron Starkweather's GitHub</a>
-            </h3>
+            <a class="header-link" href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
 		</footer>
 	</body>
 </html>
