--- a/match_track.html
+++ b/match_track.html
@@ -6,13 +6,14 @@
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	    <title>PaddleMatch - Track Match</title>
         <link rel="stylesheet" href="../css/styles.css">
+        <link rel="stylesheet" href="../css/matchTrackStyles.css">
 
 	</head>
 	<body>
 		<header>
 
             <div id="logo">
-                <img src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
+                <img id="app-logo" src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
             </div>
             <div id="service-info">
                 <h1 class="service-name">PaddleMatch</h1>
@@ -51,9 +52,7 @@
             
 		</main>
 		<footer>
-            <h3>
-                <a href="https://github.com/aaronstarky/startup.git">Aaron Starkweather's GitHub</a>
-            </h3>
+            <a href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
 		</footer>
 	</body>
 </html>
