--- a/login.html
+++ b/login.html
@@ -43,9 +43,7 @@
 		</main>
 
 		<footer>
-            <h3>
-                <a href="https://github.com/aaronstarky/startup.git">Aaron Starkweather's GitHub</a>
-            </h3>
+            <a href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
 		</footer>
 	</body>
 </html>
