--- a/match_track.html
+++ b/match_track.html
@@ -34,25 +34,26 @@
 		<main>
 
             <!-- Score Keeping is done here-->
-            <div class="score" id="scoringArea">
-                <div id="team1">
+            <div id="scoringArea">
+                <div class="score" id="team1">
                     0
                 </div>
+                <div class="subtext">
                     VS
+                </div>
+                    
                 <div class="score" id="team2">
                     0
                 </div>
             </div>
-
             <div id="buttons">
-                <button id="team1Button" name="team1Button">TEAM 1</button>
-                <button id="team2Button" name="team2Button">TEAM 2</button>
-                <button id="undo" name="undo">UNDO</button>
+                <button class="scoring-button" id="team1Button" name="team1Button">TEAM 1</button>
+                <button class="scoring-button" id="undo" name="undo">UNDO</button>
+                <button class="scoring-button" id="team2Button" name="team2Button">TEAM 2</button>
             </div>
-            
 		</main>
 		<footer>
-            <a href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
+            <a class="header-link" href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
 		</footer>
 	</body>
 </html>
