--- a/match_list.html
+++ b/match_list.html
@@ -12,7 +12,7 @@
 	<body>
         <header>
             <div id="logo">
-                <img src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
+                <img id="app-logo"src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
             </div>
             <div id="service-info">
                 <h1 class="service-name">PaddleMatch</h1>
@@ -31,56 +31,93 @@
         </header>
 		<main>
             
-
-            <h3>Placeholder for database data</h3>
-            <ul>
-                <li>
-                    <div class="matchListItem">
-                        <p>
-                            Today's Date
-                        </p>
-                        <div class="score">
-                            Team 1 Score
-                        </div>
-                        <div class="score">
-                            Team 2 Score
-                        </div>
+            <h3>Matches in Progress</h3>
+            <div class="match-list">
+                <p><i>There are currently no matches in progress :)</i></p>
+            </div>
+            <h3>Matches Completed</h3>
+            <p><i>The matches completed section is where the program will pull from database data</i></p>
+            <div class="match-list">
+                <div class="match-list-item">
+                    <p>
+                        Today's Date
+                    </p>
+                    <div class="score team1">
+                        Team 1 Score
                     </div>
-                </li>
-                <li>
-                    <div class="matchListItem">
-                        <p>
-                            Yesterday
-                        </p>
-                        <div class="score">
-                            Team 1 Score
-                        </div>
-                        <div class="score">
-                            Team 2 Score
-                        </div>
+                    <div class="score team2">
+                        Team 2 Score
                     </div>
-                </li>
-                <li>
-                    <div class="matchListItem">
-                        <p>
-                            The Day Before Yesterday
-                        </p>
-                        <div class="score">
-                            Team 1 Score
-                        </div>
-                        <div class="score">
-                            Team 2 Score
-                        </div>
+                    <div class="player-list">
+                        <p>Player 1</p>
+                        <p>Player 2</p>
                     </div>
-                </li>
-                
-            </ul>
-            <div name="matchList">
-
+                    <div class="player-list">
+                        <p>Player 3</p>
+                        <p>Player 4</p>
+                    </div>
+                </div>
+                <div class="match-list-item">
+                    <p>
+                        Today's Date
+                    </p>
+                    <div class="score team1">
+                        Team 1 Score
+                    </div>
+                    <div class="score team2">
+                        Team 2 Score
+                    </div>
+                    <div class="player-list">
+                        <p>Player 1</p>
+                        <p>Player 2</p>
+                    </div>
+                    <div class="player-list">
+                        <p>Player 3</p>
+                        <p>Player 4</p>
+                    </div>
+                </div>
+                <div class="match-list-item">
+                    <p>
+                        Today's Date
+                    </p>
+                    <div class="score team1">
+                        Team 1 Score
+                    </div>
+                    <div class="score team2">
+                        Team 2 Score
+                    </div>
+                    <div class="player-list">
+                        <p>Player 1</p>
+                        <p>Player 2</p>
+                    </div>
+                    <div class="player-list">
+                        <p>Player 3</p>
+                        <p>Player 4</p>
+                    </div>
+                </div>
+                <div class="match-list-item">
+                    <p>
+                        Today's Date
+                    </p>
+                    <div class="score team1">
+                        Team 1 Score
+                    </div>
+                    <div class="score team2">
+                        Team 2 Score
+                    </div>
+                    <div class="player-list">
+                        <p>Player 1</p>
+                        <p>Player 2</p>
+                    </div>
+                    <div class="player-list">
+                        <p>Player 3</p>
+                        <p>Player 4</p>
+                    </div>
+                </div>
             </div>
 		</main>
 		<footer>
-            <a href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
+            <a class="header-link" href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
 		</footer>
 	</body>
 </html>
