Updates all around

--- a/matches.html
+++ b/matches.html
@@ -17,10 +17,10 @@
             <div id="service-info">
                 <h1 class="service-name">PaddleMatch</h1>
                 <nav class="nav-buttons">
-                    <a class="header-link" id="start-match-button" href="match_setup.html">
+                    <a class="header-link" id="start-match-button" href="setup.html">
                         START MATCH
                     </a>
-                    <a class="header-link" id="view-matches-button" href="match_list.html">
+                    <a class="header-link" id="view-matches-button" href="matches.html">
                         VIEW MATCHES
                     </a>
                     <a class="header-link" id="logout-button" href="login.html">
