Updating list styles, refactoring updating match list item cards

--- a/track.html
+++ b/track.html
@@ -6,7 +6,7 @@
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	    <title>PaddleMatch - Track Match</title>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/matchTrackStyles.css">
+        <link rel="stylesheet" href="../css/track-styles.css">
 
 	</head>
 	<body>
@@ -38,7 +38,7 @@
                         0
                     </div>
                     <div class="team-name" id="team1Name">
-                        TEAM 1
+                        Team 1
                     </div>
                 </div>
                 <div class="score-button" id="team2">
@@ -46,7 +46,7 @@
                         0
                     </div>
                     <div class="team-name" id="team2Name">
-                        TEAM 2
+                        Team 2
                     </div>
                 </div>
                 <div class="score-button setting" id="team2">
