--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	    <link rel="stylesheet" href="../css/styles.css">
+        <!-- <link rel="stylesheet" href="../css/header-footer-styles.css"> -->
         <title>PaddleMatch - Dashboard</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
 	</head>
 	<body>
 		<header>
-            <div id="logo">
-                <img id="app-logo" src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
-            </div>
+            <img id="app-logo" src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
             <div id="service-info">
                 <h1 class="service-name">PaddleMatch</h1>
                 <nav class="nav-buttons">
