--- a/index.html
+++ b/index.html
@@ -1,47 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-	    <meta charset="UTF-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-	    <link rel="stylesheet" href="../css/styles.css">
-        <!-- <link rel="stylesheet" href="../css/header-footer-styles.css"> -->
-        <title>PaddleMatch - Dashboard</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
-	</head>
-	<body>
-		<header>
-            <img id="app-logo" src="PaddleMatchLogo.svg" alt="PaddleMatch Logo">
-            <div id="service-info">
-                <h1 class="service-name">PaddleMatch</h1>
-                <nav class="nav-buttons">
-                    <a class="header-link" id="start-match-button" href="setup.html">
-                        START MATCH
-                    </a>
-                    <a class="header-link" id="view-matches-button" href="matches.html">
-                        VIEW MATCHES
-                    </a>
-                    <a class="header-link" id="logout-button" href="login.html">
-                        LOGIN
-                    </a>
-                </nav>
-            </div> 
-        </header>
-		<main>
-            <p>
-                To start tracking a match, click the link "Start Match!"
-                To view previously tracked matches, click the link "View Matches!"
-            </p> 
-
-            <!-- Placeholder for webservice that will show pickleball related headlines from off the internet. -->
-            <div>
-                This is a placeholder for a web service that will grab the most recent pickleball related headline off of Google
-            </div>
-
-            <br> 
-		</main>
-		<footer>
-            <a class="header-link" href="https://github.com/aaronstarky/startup.git">AARON STARKWEATHER'S GITHUB</a>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
